Removed clear button, restyled, and added a button to pick a number

--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <button class="clear" type="button">Clear</button>
+    <header>
+      <h1>ETCH A SKETCH</h1>
+    </header>
+    <div class="buttons">
+      <button class="pick" type="button">Pick a number</button>
+    </div>
     <div class="grid"></div>
 
     <script src="script.js"></script>
