Added RGB button and restyled grid removing borders from squares

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </header>
     <div class="buttons">
       <button class="pick" type="button">Pick a number</button>
+      <button class="rgb">Random RGB</button>
     </div>
     <div class="grid"></div>
 
