Added slider for user input instead of prompt

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
     <div class="buttons">
       <button class="pick" type="button">Pick a number</button>
       <button class="rgb">Random RGB</button>
+      <label id="slider">2</label>
+      <input type="range" name="" min="2" max="64" id="" />
     </div>
     <div class="grid"></div>
-
     <script src="script.js"></script>
   </body>
 </html>
