--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
       <h1>ETCH A SKETCH</h1>
     </header>
     <div class="buttons">
-      <button class="pick" type="button">Pick a number</button>
-      <button class="rgb">Random RGB</button>
-      <label id="slider">2</label>
+      <label>Pick a number using the slider</label>
+      <label id="sliderText">2</label>
       <input type="range" name="" min="2" max="64" id="" />
     </div>
     <div class="grid"></div>
