--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="buttons">
       <label>Pick a number using the slider</label>
       <label id="sliderText">2</label>
-      <input type="range" name="" min="2" max="64" id="" />
+      <input type="range" name="" min="2" max="64" value="2" />
     </div>
     <div class="grid"></div>
     <script src="script.js"></script>
